fix appearing scrollbars on body

--- a/less/runtime/base.less
+++ b/less/runtime/base.less
@@ -1,4 +1,5 @@
 body {
 	background-color: @background-color;
 	.baseline-grid(@baseline-grid);
+	overflow: hidden;
 }
